# AITuberMurmurSystem

./: .cursorrules  .env.template  .gitignore  LICENSE  README.md  advanced_text_processor.py  aivis_speech_adapter.py  check_youtube_config.py  config.py  config.yaml  conversation_history.py  main.py  memory_manager.py  openai_adapter.py  pyproject.toml  start_monologue.ps1  start_monologue.sh  status_monologue.sh  stop_monologue.ps1  stop_monologue.sh
.claude/: CLAUDE.md  settings.json
doc/: file_dependency_analysis.md  graceful_shutdown_system.md  monologue_management_system.md  persona_prompt_integration_guide.md  quick_setup_guide.md  requirement_definition_v2.md  task.md  theme_system_guide.md
prompts/: chill_chat_prompt.txt  ending_greeting.txt  episode_deep_dive_prompt.txt  initial_greeting.txt  integrated_response.txt  master_prompt.txt  music_syotaro.txt  normal_monologue.txt  persona_prompt.txt  poem.txt  test_theme_lifecycle.txt  theme_continuation_monologue.txt  viewer_consultation_prompt.txt  yogore_nakahara.txt
txt/: VTuber_Stream_Classification_Prompt.txt  kioku_hayate.txt  ng_word.txt
v2/: obs_adaper.py  run_integrated_test.py
v2/config/: comment_filter.json
v2/controllers/: main_controller.py
v2/core/: event_queue.py  events.py  logger.py  metrics.py  test_mode.py
v2/handlers/: comment_handler.py  daily_summary_handler.py  greeting_handler.py  master_prompt_manager.py  mode_manager.py  monologue_handler.py  stream_summary_handler.py
v2/services/: audio_manager.py  integrated_comment_manager.py  obs_text_manager.py  prompt_manager.py
(+45 files in other folders)
